--- a/package.json
+++ b/package.json
@@ -5,20 +5,23 @@
   "main": "index.js",
   "scripts": {
     "start": "node server/server.js",
-    "test": "export NODE_ENV=test || SET NODE_ENV=test && mocha server/**/*.test.js",
+    "test": "export NODE_ENV=test mocha server/**/*.test.js",
     "test-watch": "nodemon --exec 'npm test'"
   },
   "engines": {
-    "node": "6.2.2"
+    "node": "8.10.0"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.15.2",
+    "crypto-js": "^3.1.9-1",
     "express": "^4.14.0",
+    "jsonwebtoken": "^8.2.0",
     "lodash": "^4.15.0",
     "mongodb": "^2.2.5",
-    "mongoose": "^4.5.9"
+    "mongoose": "^5.0.12",
+    "validator": "^9.4.1"
   },
   "devDependencies": {
     "expect": "^1.20.2",
