--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "body-parser": "^1.15.2",
     "crypto-js": "^3.1.9-1",
     "express": "^4.14.0",
+    "helmet": "^3.12.0",
     "jsonwebtoken": "^8.2.0",
     "lodash": "^4.15.0",
     "mongodb": "^2.2.5",
